public/css/lxq-style.css
/* ... */
/*
 Triangle top left in comment balloon
 */
.lxq-triangle-topleft {
  border-top: 10px solid rgba(247,247,247,1); /* #f7f77f */
  border-left: 12px solid transparent;
  -webkit-filter: drop-shadow(-1px 0px 0px rgba(0,0,0,.2));
  filter: drop-shadow(-1px 0px 0px rgba(0,0,0,.2));
  margin-left: -12px;
}


/*
 ******
 Clearfix helpers
 ******
 */
.lxq-clearfix {
  *zoom: 1;
}
.lxq-clearfix:before,
.lxq-clearfix:after {
  display: table;
  content: "";
  line-height: 0;
}

.lxq-clearfix:after {
  clear: both;
}

/*
 ******
 Display and visibility helpers
 ******
 */
.lxq-hide {
  display: none!important;
}

.lxq-visible {
  display: block!important;
}

.n0 .n1, .n2, .n3, .n4 {
    background-color:#D08053;
}
.p0 .p1, .p2, .p2sub1, .p2sub2, .p3, .p3sub1, .p4, .p5, .p6, .p7, .p8 {
    background-color:#65C783
}
.c0 .c1, .c2, .c2sub1, .c3, .c3sub1, .c4, .c5 {
    background-color:#65C783;
}
.u0 .u1, .u2, .u3, .u4, .u5 {
    background-color:#b8a300;
}
.s0 .s1, .s2, .s3, .s3sub1, .s3sub1, .s4, .s5 {
    background-color:#38C0C5;
}
.l0, .l2, .l3, .l4 {
   background-color:#B792E6;
}

.n0 {
    background-color:#D08053;
}
.p0 {
    background-color:#65C783
}
.c0 {
    background-color:#65C783;
}
.u0 {
    background-color:#b8a300;
}
.s0 {
    background-color:#38C0C5;
}
.l0 {
   background-color:#B792E6;
}
.bl0 {
    text-decoration: line-through;
}
.g0 {
    text-decoration: underline; 
}
.m {
    background-color:#EA92B8;
}
.m, .l0, .p0, .c0, .u0, .s0 .g0 {
    padding: 0.1rem 0.2rem;
}
/*.m, .l1, .l2, .l3, .l4, .n1, .n2, .n3, .n4, .p1, .p2, .p2sub1, .p2sub2, .p3, .p3sub1, .p4, .p5, .p6, .p7, .p8, 
.c1, .c2, .c3, .c2sub1, .c3sub1, .c4, .c5, .u1, .u2, .u3, .u4, .u5, .s1, .s2, .s3, .s3sub1, .s3sub1, .s4, .s5 {
    padding: 0.1rem 0.2rem;
}*/


/*
 ******
 Display number of potential errors under target textarea
 ******
 */
 .editarea .toolbar {
     position: relative;
 }
 
 .lxq-error-seg {
    position: absolute;
    bottom: -0.2rem;
    left: 8rem;
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 1.5rem;
    text-align: center;
    background-color: #fff;
    font-size: 1.1rem;
    font-weight: 100;
}

 .lxq-error-seg::after {
    content: attr(numberoferrors);
    vertical-align: middle;
    color: #0798bc;
 }

 .lxq-error-seg.lxq-error-changed::after {
     color: #fff;
 }

 /*
 ******
 Change style of lexiqa comment popup when there is NO error
 ******
 */
 
.lxq-triangle-top {
    border-right: 14px solid #0798bc;
 }
  
 .lxq-history-balloon-outer {
     background-color: #0798bc;
     width: auto;
     right: 208px;
     padding: 1rem 0 0;
     box-shadow: none;
 }
 
.lxq-history-balloon.lxq-history-balloon-has-no-comments {
    color: #fff;
    background-color: #0798bc;
}

.lxq-history-balloon.lxq-history-balloon-has-no-comments .lxq-comment-label {
    position: relative;
    bottom: 0.5rem;
}

 /*
 ******
 Change style of lexiqa comment popup when there are ERRORS
 ******
 */
 
 .lxq-history-balloon .lxq-thread-wrap {
    padding: 0;
}

.lxq-history-balloon.lxq-history-balloon-has-comment {
    border: 1px solid #0798bc;
}

.lxq-history-balloon-header {
    background-color: #0798bc;
    color: #fff;
    font-size: 1rem;
    font-weight: 100;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column nowrap;
        -ms-flex-flow: column nowrap;
            flex-flow: column nowrap;
}

.lxq-info-link {
    text-align: center;
    color: #0798bc;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    text-decoration: none;
    font-size: 0.8rem;
    text-transform: uppercase;
}

.lxq-info-link::after {
    content: url("../img/rsz_user_guide.png");
    display: inline-block;
    width: 2rem;
    height: 2rem;
    margin-left: 0.5rem;
    line-height: 2.8rem;
}

.lxq-info-link:hover {
    cursor: pointer;
}

.lxq-highlight-toggle {
    color: #0798bc;
    font-size: 0.8rem;
    text-transform: uppercase;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row nowrap;
        -ms-flex-flow: row nowrap;
            flex-flow: row nowrap;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
            justify-content: space-between;
}

.lxq-history-balloon-header-top {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-flex-flow: row nowrap;
        -ms-flex-flow: row nowrap;
            flex-flow: row nowrap;
    padding: 0 0.5rem;
    background-color: #fff;
}

.lxq-history-balloon-header-text {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row nowrap;
        -ms-flex-flow: row nowrap;
            flex-flow: row nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    padding: 0.7rem;
    border-top: 1px solid #fff;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    text-transform: uppercase;
    font-size: 0.9rem;
}
/* ... */

